Fix moble calendat overflow

--- a/webapp/static/less/mobile/common.less
+++ b/webapp/static/less/mobile/common.less
@@ -502,9 +502,9 @@ footer ul {
 
 #ui-datepicker-div {
   display: none;
-  overflow: hidden;
+  overflow: auto;
   width: 96%;
-  height: 40%;
+  height: 250px;
   height: calc(~"100vh - 310px");
 
 }
